# express/routes/index.js
@@ -226,4 +226,62 @@ router.get('/api/plotChartPassDSE', async function (req, res) {
 
 });
 
+router.post('/api/plotChartData', async function (req, res) {
+
+  if (req.body.constructor === Object && Object.keys(req.body).length === 0)
+    return res.status(404).send('Unable to find the requested resource!');
+     
+  var whereClause = req.body;
+
+  let result = await db.collection("assessment").find(whereClause).toArray();
+
+  if (!result) return res.status(404).send('Unable to find the requested resource!');
+
+  res.status(200).json({result});
+
+});
+
+router.get('/api/plotChartSubjectDSE', async function (req, res) {
+  
+  var groupBy = [
+    {
+      $match:{
+        AssessmentType: "DSE"
+      }
+    },
+    {
+      $group: {
+        _id: { Subject: "$Subject", Grade: "$Grade" },
+        count: { $sum: 1 }
+      }
+    },
+    {
+      $sort: {
+        _id: -1
+      }
+    }
+  ];
+  let result = await db.collection("assessment").aggregate(groupBy).toArray();
+
+  if (!result) return res.status(404).send('Unable to find the requested resource!');
+
+  var data = [];
+
+  const Subject = ["CHIN", "ENG", "MATH", "LIBS"];
+
+  for (var j = 0; j < Subject.length; j++) {
+    var obj = {};
+    for (var i = 0; i < result.length; i++) {
+      if (result[i]._id.Subject === Subject[j]) {
+        obj.Subject = result[i]._id.Subject;
+        obj[result[i]._id.Grade] = result[i].count;
+      }
+    }
+    data[j]=obj;
+  }
+
+  return res.status(200).json({data});
+
+});
+
 module.exports = router;
